Оформление. Сократить вертикальные отступы и оформить дату

--- a/ui/css/art.css
+++ b/ui/css/art.css
@@ -11,4 +11,5 @@ body{
     background:#fff;
     box-shadow:#99a0a5 0 3px 10px;
 }
+.art-date{font-size:.9em;color:#777}
 .art-p{white-space:pre-line}
